# RogueDM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindLua53.cmake  FindSDL2_net.cmake
docs/: .gitignore  DoxygenLayout.xml  doxyfile  extra-docs.md
docs/doxygen/: README  doxyfile
docs/pages/: mainpage.md
docs/pages/collaborators/: application-design.md  collaborators-license-and-copyright.md  collaborators.md  development.md  game-rulesets.md
docs/pages/collaborators/application-design/: app-configuration.md  cli-interface.md  game-definitions.md  general-diagram.md  main-concepts.md  networking.md  program-execution.md  sdl2-interface.md  word-sentences-commands.md
docs/pages/getting-started/: building-roguedm.md  getting-roguedm.md  getting-started.md
docs/pages/user-guide/: dm-guide.md  hosting-roguedm.md  player-guide.md  user-guide.md  using-roguedm.md
env/share/: config.ini
env/share/imgs/: LICENSE
src/: CMakeLists.txt  CommandHandlerInterface.hpp  Config.cpp  Config.hpp  GameComponentInterface.hpp  IOLocal.cpp  IOLocal.hpp  IORemote.cpp  IORemote.hpp  InitialState.cpp  InitialState.hpp  RogueDM.cpp  RogueDM.hpp  StateInterface.hpp  StateMachine.cpp  StateMachine.hpp  extra-docs.hpp  gettext.hpp  macros.hpp  main.cpp  main_python.cpp  strings.hpp  version.hpp  version.hpp.in
src/main/: Game.cpp  Game.hpp  MainState.cpp  MainState.hpp
src/roguedm/: Application.cpp  Application.hpp  CMakeLists.txt  CommandHandlerInterface.hpp  Config.cpp  Config.hpp  GameComponentInterface.hpp  IOLocal.cpp  IOLocal.hpp  IORemote.cpp  IORemote.hpp  InitialState.cpp  InitialState.hpp  RogueDM.hpp  StageInterface.hpp  commands.hpp  extra-docs.hpp  macros.hpp  paths.hpp  paths.hpp.in  strings.cpp  strings.hpp  version.hpp  version.hpp.in
src/roguedm/cli/: CliIO.cpp  CliIO.hpp
src/roguedm/commands/: Command.hpp  CommandHandlerInterface.hpp  CommandHandlers.cpp  CommandHandlers.hpp  Sentence.hpp  Word.hpp
src/roguedm/game/: Game.cpp  Game.hpp
src/roguedm/main/: Game.cpp  Game.hpp  Main.cpp  Main.hpp
src/roguedm/network/: Network.cpp  Network.hpp  NetworkIO.cpp  NetworkIO.hpp
src/roguedm/sdl2/: CharmapStamper.cpp  CharmapStamper.hpp  CommandComposer.cpp  CommandComposer.hpp  Gui.cpp  Gui.hpp  Sdl2IO.cpp  Sdl2IO.hpp  mbtools.cpp  mbtools.hpp  translations.hpp
src/roguedm/stages/: GuiStage.cpp  GuiStage.hpp
src/roguedm_test/: CMakeLists.txt  test.cpp
